--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "fnf-manager",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "^1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "preact": "^10.16.0",
-    "tailwindcss": "^3.4.10"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "@tauri-apps/cli": "^1"
-  }
+	"name": "fnf-manager",
+	"private": true,
+	"version": "0.1.0",
+	"type": "module",
+	"packageManager": "bun@1.1.25",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"tauri": "tauri",
+		"format": "prettier -w ."
+	},
+	"dependencies": {
+		"@tauri-apps/api": "^1",
+		"@types/bun": "^1.1.8",
+		"@types/prettier": "^3.0.0",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.41",
+		"preact": "^10.16.0",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.10",
+		"ulid": "^2.3.0",
+		"zod": "^3.23.8",
+		"zod-to-json-schema": "^3.23.2"
+	},
+	"devDependencies": {
+		"@preact/preset-vite": "^2.5.0",
+		"typescript": "^5.2.2",
+		"vite": "^5.3.1",
+		"@tauri-apps/cli": "^1"
+	}
 }
