--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "fnf-manager-assets"]
 	path = fnf-manager-assets
-	url = ./fnf-manager-assets/
+	url = https://github.com/tpguy825/fnf-manager-assets.git
