--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
 	"name": "fnf-manager",
 	"private": true,
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"type": "module",
-	"packageManager": "bun@1.1.25",
+	"packageManager": "bun@1.1.27",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"tauri": "tauri",
-		"format": "prettier -w ."
+		"format": "prettier -w .",
+		"build:win": "tauri build --target x86_64-pc-windows-gnu",
+		"build:linux": "tauri build --target x86_64-unknown-linux-gnu"
 	},
 	"dependencies": {
 		"@tauri-apps/api": "^1",
-		"@types/bun": "^1.1.8",
+		"@types/bun": "^1.1.9",
 		"@types/prettier": "^3.0.0",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.41",
-		"preact": "^10.16.0",
-		"prettier": "^3.3.3",
-		"tailwindcss": "^3.4.10",
+		"isomorphic-dompurify": "^2.15.0",
+		"postcss": "^8.4.45",
+		"preact": "^10.23.2",
+		"tailwindcss": "^3.4.11",
 		"ulid": "^2.3.0",
-		"zod": "^3.23.8",
-		"zod-to-json-schema": "^3.23.2"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@preact/preset-vite": "^2.5.0",
-		"typescript": "^5.2.2",
-		"vite": "^5.3.1",
+		"prettier": "^3.3.3",
+		"@preact/preset-vite": "^2.9.1",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.5",
+		"zod-to-json-schema": "^3.23.3",
 		"@tauri-apps/cli": "^1"
 	}
 }
